added start/high score buttons and basic css styling

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css" 
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Code Quiz</title>
 </head>
-
 
 <body>
     <header>
     <h1 class="title">Code Quiz</h1>
     </header>
+
+    <!-- Text Section -->
+    <section class="quiz-text">
+        <h2>Welcome to Code Quiz</h2>
+        <p>Press "Start Quiz" to start or "High Scores" to look at high scores.</p>
+    </section>
+
+    <!-- Button Section -->
+    <section>
+        <button id="start" class="btn">Start Quiz!</button>
+        <button id="highscore" class="btn">High Scores</button>
+    </section>
     
     <script src="script.js"></script>
 </body>
