added timer to start when startQuiz is clicked

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,6 +11,7 @@
   <body>
     <header>
       <h1 class="title">Code Quiz</h1>
+      <button id="timer"></button>
     </header>
 
     <!-- Text Section -->
@@ -20,6 +21,7 @@
         Press "Start Quiz" to start or "High Scores" to look at high scores.
       </p>
     </section>
+
 
     <!-- Button Section -->
     <section>
