--- a/assets/index.html
+++ b/assets/index.html
@@ -11,7 +11,8 @@
   <body>
     <header>
       <h1 class="title">Code Quiz</h1>
-      <button id="timer"></button>
+      <div id="timer">
+      </div>
     </header>
 
     <!-- Text Section -->
