added hidden question and quiz buttons until quiz starts

--- a/assets/index.html
+++ b/assets/index.html
@@ -30,6 +30,15 @@
       <button id="highscore" class="btn">High Scores</button>
     </section>
 
+    <!-- Question Section -->
+    <section class="question-content">
+      <h3 class="hide" id="question1">What color is the sky?</h3>
+      <button class ="hide quiz-btn1">button 1</button>
+      <button class ="hide quiz-btn2">button 2</button>
+      <button class ="hide quiz-btn3">button 3</button>
+      <button class ="hide quiz-btn4">button 4</button>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
