--- a/assets/index.html
+++ b/assets/index.html
@@ -26,17 +26,17 @@
 
     <!-- Button Section -->
     <section>
-      <button id="start" class="btn">Start Quiz!</button>
+      <button id="start" class="btn">Start Quiz</button>
       <button id="highscore" class="btn">High Scores</button>
     </section>
 
     <!-- Question Section -->
-    <section class="question-content">
-      <h3 class="hide" id="question1">What color is the sky?</h3>
-      <button class ="hide quiz-btn1">button 1</button>
-      <button class ="hide quiz-btn2">button 2</button>
-      <button class ="hide quiz-btn3">button 3</button>
-      <button class ="hide quiz-btn4">button 4</button>
+    <section id="question-content" class="hide">
+      <h3 id="question">Questions placeholder</h3>
+      <button class ="quiz-btn">button 1</button>
+      <button class ="quiz-btn">button 2</button>
+      <button class ="quiz-btn">button 3</button>
+      <button class ="quiz-btn">button 4</button>
     </section>
 
     <script src="script.js"></script>
