--- a/assets/index.html
+++ b/assets/index.html
@@ -33,10 +33,8 @@
     <!-- Question Section -->
     <section id="question-content" class="hide">
       <h3 id="question">Questions placeholder</h3>
-      <button class ="quiz-btn">button 1</button>
-      <button class ="quiz-btn">button 2</button>
-      <button class ="quiz-btn">button 3</button>
-      <button class ="quiz-btn">button 4</button>
+      <div class = "answers">
+      </div>
     </section>
 
     <script src="script.js"></script>
