added highscore and localstorage

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!-- Text Section -->
     <section class="quiz-text">
       <h2>Welcome to Code Quiz</h2>
+      <p>You will have 60 seconds to complete the quiz.</p> 
+      <p>Every answer you answer correctly will add 10 points to your score.</p> 
+      <p>Every incorrect answer subtracts 5 seconds from the timer.</p>
       <p>
         Press "Start Quiz" to start or "High Scores" to look at high scores.
       </p>
@@ -36,6 +39,10 @@
       <div class = "answers">
       </div>
     </section>
+
+    <secion id="highscore-content" class="hide">
+      <h3 id="highscore-title">Highscores</h3>
+    </secion>
 
     <script src="./assets/script.js"></script>
   </body>
