added highscore table placeholder

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
 
     <secion id="highscore-content" class="hide">
       <h3 id="highscore-title">Highscores</h3>
+      <table id = "score-table"></table>
+        <tr>
+          <th>Name</th>
+          <th>Score</th>
+        </tr><br>
+        <tr>
+          <td>""</td>
+          <td>""</td>
+        </tr>
     </secion>
 
     <script src="./assets/script.js"></script>
