added highscore display to get high score from local storage

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <th>Score</th>
         </tr><br>
         <tr>
-          <td>""</td>
-          <td>""</td>
+          <td id="scoreName">""</td>
+          <td id="scoreScore">""</td>
         </tr>
     </secion>
 
