fixed highScoreDisplay function to reference high score and name correctly

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <th>Score</th>
         </tr><br>
         <tr>
-          <td id="scoreName">""</td>
-          <td id="scoreScore">""</td>
+          <div id="scoreName">""</div>
+          <div id="scoreScore">""</div>
         </tr>
     </secion>
 
