updated README.md file

--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@
       </div>
     </section>
 
+    <!-- Highscore Section -->
     <secion id="highscore-content" class="hide">
-      <h3 id="highscore-title">Highscores</h3>
-      <table id = "score-table"></table>
-        <tr>
-          <th>Name</th>
-          <th>Score</th>
-        </tr><br>
-        <tr>
-          <div id="scoreName">""</div>
-          <div id="scoreScore">""</div>
-        </tr>
+      <h3 id="highscore-title">Highscore</h3>
+      <div id="score-table">
+        <!-- <div>
+          <div>Initials    Score</div>
+          <div>Score</div>
+        </div> -->
+        <div>
+          <div id="scoreName"></div>
+          <div id="scoreScore"></div>
+        </div>
+        </div>
     </secion>
 
     <script src="./assets/script.js"></script>
